Higher padding on card text to fix overflow

--- a/css/tud.css
+++ b/css/tud.css
@@ -132,7 +132,7 @@ div.card-image {
 div.card-text {
     margin-left: 0.6rem;
     margin-right: 0.5rem;
-    padding-bottom: 10%;
+    padding-bottom: 3rem;
 }
 
 div.card-link {
